[package]
name = "async-rate-limit"
version = "0.0.3"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "Common traits for rate limiting and implementations in async contexts."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/async-rate-limit"
keywords = ["tokio", "async", "rate", "limiting"]


[dependencies]
chrono = { version = "0.4.26", default-features = false }
tokio = { version = "1.29.1", features = ["full", "test-util"] }
