[package]
name = "async-rate-limit"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Blanchard"]
description = "Common traits for rate limiting and implementations in async contexts."
license = "MIT"
repository = "https://github.com/Brendan-Blanchard/async-rate-limit"
keywords = ["tokio", "async", "rate", "limiting"]
categories = ["asynchronous", "concurrency", "web-programming"]
exclude = [".idea", ".gitignore", ".github"]


[dependencies]
tokio = { version = "1.38", features = ["full", "test-util"] }
